--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: sans-serif;
   min-height: 100vh;
   margin: 0;
-  background: #f8f9fa;
+  background: #fff;
 }
 
 ::-webkit-scrollbar {
@@ -178,26 +178,18 @@ main #recordings .search-box button:hover {
   align-items: center;
 }
 
-.recording-item .recording-controls audio {
-  width: 80%;
-  height: 40px;
-  border-radius: 20px;
-  background: #f3f3f3;
-  outline: none;
-}
-
 .recording-item .recording-actions {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 10px;
+  gap: 6px;
   margin-left: 18px;
 }
 
 .recording-item .recording-actions button {
   background: #f3f3f3;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   color: #000;
   display: flex;
   align-items: center;
@@ -207,6 +199,10 @@ main #recordings .search-box button:hover {
   cursor: pointer;
   transition: background .3s ease-in-out;
   transition: .3s ease-in-out;
+}
+.recording-item .recording-actions button.delete-button:hover{
+  background: #ff4d4d;
+  color: #fff;
 }
 
 .recording-item .recording-actions button:hover {
@@ -225,7 +221,7 @@ main #recordings .search-box button:hover {
   flex-direction: column;
   padding: 30px 20px 20px 20px;
   width: 400px;
-  border-radius: 40px;
+  border-radius: 50px;
   transition: .3s ease-in-out;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 }
@@ -234,6 +230,7 @@ main #recordings .search-box button:hover {
   width: 600px;
   height: auto;
   padding: 30px 20px;
+  border-radius: 60px;
 }
 
 #record-controls .expand {
